# brophylactic-bot

./: .dockerignore  .dusk-warden.toml  .env.example  .eslintrc.js  .eslintrc.yaml  .gitignore  .stack-sync.toml  .vault-sync.toml  CLAUDE.md  Cargo.toml  Dockerfile  bacon.toml  code-review-impl.md  code-review.md  deploy.sh  docker-compose.yaml  docker-refactor.md  esbuild.js  flake.nix  import_map.json  interaction-example.json  justfile  k8s.yaml  migration-options.md  now.json  package-lock.json  package.json  rust-migration.md  tech-debt.md  tsconfig.build.json  tsconfig.json  tslint.yml
infra/: compose.yaml
infra/env_configs/: dev.tfvars  prod.tfvars
infra/terraform/: .terraform.lock.hcl  dns.tf  main.tf  outputs.tf  tunnel.tf  vars.tf
infrastructure/env_configs/: dev.tfvars  prod.tfvars
infrastructure/terraform/: .terraform.lock.hcl  api.tf  dns.tf  lambda.tf  main.tf  outputs.tf  stepfunction.tf  vars.tf
old_src/: bot.ts  config.ts  context.ts
old_src/commands/: newUser.ts  promotion.ts
old_src/reputation/: bgr.ts  guess.ts  lottery.ts  store.ts
old_src/util/: delay.ts  number.ts  roles.ts
scripts/: api-deploy  bundle_lambda  command-deploy  deploy  init-secret.sh  local  publish-docker  publish.sh  redeploy-commands.sh  sync-commands
src/: api.ts  bot.js  bot.ts  commands.rs  config.js  config.rs  config.ts  context.rs  context.ts  deps.ts  di.ts  lambda.ts  main.rs  mod.ts  redeploy.ts  server.js  server.ts  workflow.ts
src-ts/: redeploy.ts  server.ts
src-ts/commands/: bgr.ts  (+1 more)
test/: roll-command.json  roll.sh
tools/: token.js  token.ts
(+129 files in other folders)
