[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Firebase/Firestore
firestore = "0.47"
gcloud-sdk = { version = "0.28", features = ["google-firestore-v1"] }

# Base64 decoding (for FIREBASE_64 env var)
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
chrono-tz = "0.10"
millisecond = "0.15"

# Random
rand = "0.8"
rand_chacha = "0.3"

# Regex (dice parsing)
regex = "1"

# ID generation
nanoid = "0.4"
